# emelf

./: .gitignore  CMakeLists.txt  README.md  TODO  appversion  emelf-config-version.cmake.in  emelf-config.cmake.in
include/: dh.h  edh.h  emelf.h
src/: CMakeLists.txt  dh.c  edh.c  emelf.c  emelfread.c
