CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
PROJECT(emelf C)

set(EMELF_VERSION_MAJOR 0)
set(EMELF_VERSION_MINOR 1)
set(EMELF_VERSION_PATCH 0)
set(EMELF_VERSION ${EMELF_VERSION_MAJOR}.${EMELF_VERSION_MINOR}.${EMELF_VERSION_PATCH})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/build)

ADD_DEFINITIONS(-Wall -std=c99 -D_XOPEN_SOURCE=700 -O2 -DEMELF_VERSION="${EMELF_VERSION}" -g)

ADD_SUBDIRECTORY(src build)

# vim: tabstop=4
